--- a/src/app/domains/work-order/components/work-order-items-list/work-order-items-list.component.html
+++ b/src/app/domains/work-order/components/work-order-items-list/work-order-items-list.component.html
@@ -4,7 +4,7 @@
       <div class="title-search-row">
         <div class="title-actions">
           <h2>Work Order Items</h2>
-          <mat-form-field appearance="outline" class="search-field">
+          <mat-form-field class="search-field">
             <mat-label>Search</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="Search items">
             <mat-icon matSuffix>search</mat-icon>
