--- a/src/app/domains/work-order/components/work-order-items-list/work-order-items-list.component.scss
+++ b/src/app/domains/work-order/components/work-order-items-list/work-order-items-list.component.scss
@@ -47,6 +47,8 @@
   display: flex;
   justify-content: flex-end;
   padding: 0 16px;
+
+  
 }
 
 .search-field {
@@ -63,6 +65,13 @@
 table {
   width: 100%;
   min-width: 800px;
+
+  .mat-mdc-header-cell {
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.87);
+    background-color: #f5f5f5;
+    padding: 12px 16px;
+  }
 }
 
 .mat-column-actions {
@@ -71,10 +80,12 @@ table {
 }
 
 .mat-mdc-row .mat-mdc-cell {
-  border-bottom: 1px solid transparent;
+  border-bottom: 1px solid #b7b7b7;
   border-top: 1px solid transparent;
-  cursor: pointer;
+  padding-block: 12px;
 }
+
+
 
 .mat-mdc-row:hover .mat-mdc-cell {
   border-color: currentColor;
