--- a/src/app/domains/work-order/components/work-order-list/work-order-list.component.html
+++ b/src/app/domains/work-order/components/work-order-list/work-order-list.component.html
@@ -19,7 +19,7 @@
   <div class="table-container">
     <table mat-table [dataSource]="dataSource" matSort class="work-order-table">
       <!-- WO Number Column -->
-      <ng-container matColumnDef="woNumber">
+      <ng-container matColumnDef="woNumber" sticky="left">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>WO Number</th>
         <td mat-cell *matCellDef="let workOrder">{{workOrder.details.workOrderNumber}}</td>
       </ng-container>
@@ -73,10 +73,10 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns sticky:true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
           (click)="onRowClick(row)"
-          class="work-order-row">
+          class="work-order-row" >
       </tr>
     </table>
 
