--- a/src/app/shared/components/ng-table/ng-table.component.scss
+++ b/src/app/shared/components/ng-table/ng-table.component.scss
@@ -46,3 +46,14 @@
     padding: 6px 2px;
   }
 }
+
+/* Table header styling */
+.mat-header-row {
+  background-color: #f5f5f5;
+}
+
+.tableHeader {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
