--- a/src/app/domains/work-order/components/work-order-item-edit-dialog/work-order-item-edit-dialog.component.html
+++ b/src/app/domains/work-order/components/work-order-item-edit-dialog/work-order-item-edit-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="edit-dialog-container">
-  <h2 mat-dialog-title>Edit Work Order Item</h2>
+  <h2 mat-dialog-title>{{ dialogTitle }}</h2>
 
   <mat-dialog-content>
     <form [formGroup]="editForm" class="edit-form">
@@ -86,7 +86,7 @@
   <mat-dialog-actions align="end">
     <button mat-button (click)="onNoClick()">Cancel</button>
     <button mat-raised-button color="primary" (click)="onSubmit()" [disabled]="!editForm.valid">
-      Save
+      {{ dialogMode === 'create' ? 'Create' : 'Save' }}
     </button>
   </mat-dialog-actions>
 </div>
