--- a/src/app/domains/work-order/components/overview/overview.component.html
+++ b/src/app/domains/work-order/components/overview/overview.component.html
@@ -3,7 +3,7 @@
   <div class="dashboard-header d-flex justify-content-between align-items-center mb-4">
     <h1 class="dashboard-title">Dashboard Overview</h1>
     <div class="header-actions">
-      <button mat-raised-button class="action-button">
+      <button mat-raised-button >
         <mat-icon>refresh</mat-icon>
         <span class="ml-1">Refresh</span>
       </button>
