--- a/src/app/domains/work-order/components/work-order-form/work-order-form.component.html
+++ b/src/app/domains/work-order/components/work-order-form/work-order-form.component.html
@@ -147,23 +147,65 @@
               <div *ngFor="let item of items.controls; let i=index" [formGroupName]="i" class="array-item">
                 <div class="form-row">
                   <mat-form-field appearance="outline">
-                    <mat-label>Select Item</mat-label>
-                    <mat-select formControlName="itemId">
-                      <mat-option *ngFor="let item of availableItems" [value]="item.id">
-                        {{ item.shortDescription }} ({{ item.itemNumber }})
+                    <mat-label>Item Number</mat-label>
+                    <mat-select formControlName="itemNumber">
+                      <mat-option *ngFor="let item of availableItems" [value]="item.itemNumber">
+                        {{ item.itemNumber }}
                       </mat-option>
                     </mat-select>
+                    <mat-error *ngIf="hasError('items.' + i + '.itemNumber', 'required')">Item number is required</mat-error>
                   </mat-form-field>
 
                   <mat-form-field appearance="outline">
-                    <mat-label>Quantity</mat-label>
-                    <input matInput type="number" formControlName="quantity" min="1">
+                    <mat-label>Short Description</mat-label>
+                    <mat-select formControlName="shortDescription">
+                      <mat-option *ngFor="let item of availableItems" [value]="item.shortDescription">
+                        {{ item.shortDescription }}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="hasError('items.' + i + '.shortDescription', 'required')">Short description is required</mat-error>
+                  </mat-form-field>
+                </div>
+
+                <div class="form-row">
+                  <mat-form-field appearance="outline">
+                    <mat-label>Management Area</mat-label>
+                    <mat-select formControlName="managementArea" [disabled]="isManagementAreaDisabled(item.get('itemNumber')?.value)">
+                      <mat-option *ngFor="let area of getAvailableManagementAreas(item.get('itemNumber')?.value)" [value]="area">
+                        {{ area }}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="hasError('items.' + i + '.managementArea', 'required')">Management area is required</mat-error>
+                  </mat-form-field>
+                </div>
+
+                <div class="form-row">
+                  <mat-form-field appearance="outline">
+                    <mat-label>Estimated Quantity</mat-label>
+                    <input matInput type="number" formControlName="estimatedQuantity" min="1">
+                    <span matSuffix>{{ item.get('UOM')?.value }}</span>
+                    <mat-error *ngIf="hasError('items.' + i + '.estimatedQuantity', 'required')">Quantity is required</mat-error>
+                    <mat-error *ngIf="hasError('items.' + i + '.estimatedQuantity', 'min')">Quantity cannot be less than 1</mat-error>
                   </mat-form-field>
 
-                  <button type="button" mat-icon-button color="warn" (click)="removeItem(i)">
-                    <mat-icon>delete</mat-icon>
-                  </button>
+                  <mat-form-field appearance="outline">
+                    <mat-label>Estimated Price</mat-label>
+                    <input matInput type="number" formControlName="estimatedPrice" min="1">
+                    <span matPrefix>SAR&nbsp;</span>
+                    <mat-error *ngIf="hasError('items.' + i + '.estimatedPrice', 'required')">Price is required</mat-error>
+                    <mat-error *ngIf="hasError('items.' + i + '.estimatedPrice', 'min')">Price cannot be less than 1</mat-error>
+                  </mat-form-field>
+
+                  <mat-form-field appearance="outline">
+                    <mat-label>Estimated Price with VAT</mat-label>
+                    <input matInput formControlName="estimatedPriceWithVAT" readonly>
+                    <span matPrefix>SAR&nbsp;</span>
+                  </mat-form-field>
                 </div>
+
+                <button type="button" mat-icon-button color="warn" (click)="removeItem(i)">
+                  <mat-icon>delete</mat-icon>
+                </button>
               </div>
             </div>
           </mat-tab>
@@ -337,3 +379,4 @@
     </form>
   </mat-card>
 </div>
+
