--- a/src/app/domains/work-order/components/work-order-form/work-order-form.component.scss
+++ b/src/app/domains/work-order/components/work-order-form/work-order-form.component.scss
@@ -214,3 +214,20 @@ mat-chip-grid {
     }
   }
 }
+
+.price-display {
+  display: flex;
+  align-items: center;
+
+  padding: 0 10px;
+
+  h3 {
+    margin: 0px!important;
+    padding: 0 !important;
+
+    span {
+      font-weight: 500;
+      color: #333;
+    }
+  }
+}
