--- a/src/app/domains/work-order/components/work-order-details/work-order-details.component.scss
+++ b/src/app/domains/work-order/components/work-order-details/work-order-details.component.scss
@@ -598,7 +598,7 @@
 
       .client-name {
         margin: 0 0 12px;
-        font-size: 18px;
+        /* font-size: 18px; */
         font-weight: 500;
         color: var(--text-primary);
       }
